[FIX] fix not visible legend

--- a/src/app/osm-map/osm-map.component.css
+++ b/src/app/osm-map/osm-map.component.css
@@ -40,15 +40,3 @@ i {
   display: none;
 }
 
-.fade-legend {
-  opacity: 0;
-  transform: translateY(10px);
-  transition:
-    opacity 0.4s ease,
-    transform 0.4s ease;
-}
-
-.fade-legend.show {
-  opacity: 1;
-  transform: translateY(0);
-}
